# ml-dash

./: .gitignore  BREAKING_CHANGES.md  CHANGELOG.md  ERROR_HANDLING_AUDIT.md  LOG_SUMMARY_USAGE.md  Makefile  ORGANIZATION.md  README.md  USAGE_SUMMARY.md  demo.py  pyproject.toml  test_dxp_debug.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: cli-commands.md  experiment-setup.md  file-management.md  getting-started.md  params-proto.md  tracking-data.md
docs/: API.md  API.md.bak  CHANGE_LOG.md  MINIMAL_API.md  Makefile  README.md  SPECIAL_FILES_SUMMARY.md  TUTORIAL.md  api-quick-reference.md  api-reference.md  architecture.md  basic-training.md  buffering.md  cli-download.md  cli-list.md  cli-upload.md  cli.md  compare.md  complete-examples.md  conf.py  dashboard.md  dashrc.md  deployment.md  examples.md  experiment-charts.md  experiments.md  faq.md  files.md  getting-started.md  hyperparameter-search.md  images.md  index.md  index.rst  local-vs-remote.md  logging.md  metrics.md  model-comparison.md  overview.md  parameters.md  quick_start.md  (+3 more)
docs/_static/: custom.css
docs/api/: cache.md  client.md  client.rst  experiment.md  experiment.rst  files.rst  log.md  log.rst  metric.rst  ml_dash.md  ml_logger.md  modules.md  modules.rst  params.md  params.rst  storage.md  storage.rst  types.md
docs/archived/: FINAL_VERIFICATION.md  MIGRATION_COMPLETE.md  api-quick-reference.md  architecture.md  cli-upload.md  deployment.md  examples.md  experiments.md  faq.md  getting-started.md  hyperparameter-search.md  local-vs-remote.md  tracks.md
docs/examples/: 01_basic_experiment.py  02_logging_example.py  03_parameters_example.py  04_metrics_example.py  05_files_example.py  06_complete_training.py  07_project_root_example.py  three_usage_styles.py
docs/logo/: logo_light.psd
examples/: .gitignore  QUICKSTART.md  README.md  TEST_RESULTS.md  debug_params.py  demo.py  demo_folder_organization.py  demo_params_log.py  demo_track_features.py  pyproject.toml  test_logs_read.py  test_params_metrics_read.py
examples/baselines/: launch_baseline.py  train_baseline.py
examples/demo/: 01_quickstart.py  02_metrics.py  03_params.py  04_logs.py  05_files.py  06_tracks.py  07_experiment_modes.py  08_advanced_patterns.py  09_auto_start_singleton.py  README.md
examples/experiments/sweeps/: README.md  launch.py  run_sweep.py  sweep.jsonl  train.py
examples/experiments/sweeps/configs/: batch_sweep_gen.py  lr_sweep.jsonl  lr_sweep_gen.py  optimizer_sweep.jsonl
examples/src/ml_experiments/: __init__.py
examples/src/ml_experiments/baselines/: __init__.py  launch.py  train.py
examples/src/ml_experiments/baselines/configs/: resnet_baseline.jsonl  resnet_baseline_gen.py
examples/src/ml_experiments/sweeps/: __init__.py  train.py
examples/src/ml_experiments/sweeps/configs/: batch_sweep.jsonl  optimizer_sweep_gen.py  sweep_gen.py
examples/tests/: __init__.py  test_imports.py
scratch/: .dashrc  example.py
scripts/: e2e_aggregate_series.py  e2e_upload.py
skills/: cli-commands.skill  experiment-setup.skill  file-management.skill  getting-started.skill  params-proto.skill  tracking-data.skill  tracks.skill
test/: README.md  conftest.py  demo_manual_start.py  download_simple.py  run_all_tests.py  test_auth.py  test_auto_start.py  test_basic_session.py  test_buffer_fix.py  test_buffer_queue_pressure.py  test_buffering.py  test_cli_api.py  test_cli_create.py  test_cli_profile.py  test_cli_upload.py  test_combined_features.py  test_duplicate.py  test_experiment.py  test_file_upload_download.py  test_files.py  test_files_new_api.py  test_flatten_unflatten.py  test_folder_fix_complete.py  test_folder_templates.py  test_integration.py  test_log_stdout_stderr.py  test_logging.py  test_must_start_first.py  test_numpy_serialization.py  test_oom_protection.py  test_optional_metric_name.py  test_parameters.py  test_params_class_objects.py  test_params_log_simple.py  test_performance.py  test_run_config_master_test.py  test_run_folder_setter.py  test_run_template_expansion.py  test_save_video.py  test_session.py  (+13 more)
tests/: TEST_RIGS_SUMMARY.md  __init__.py  test_backends.py  test_dash_backend_directory.py  test_local_backend_directory.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts  versions.json
(+138 files in other folders)
