[project]
name = "ml-dash"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ge Yang", email = "ge.ike.yang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Development tools (linting, formatting, docs, optional features)
dev = [
    "ruff>=0.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "sphinx==7.1.2",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "torch>=2.0.0",
]

[project.scripts]
ml-dash = "ml_dash:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["ml_dash"]
