[project]
name = "ml-dash"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ge Yang" },
    { name = "Tom Tao" },
]
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Development tools (linting, formatting, docs, optional features)
dev = [
    # Linting and formatting
    "ruff>=0.8.0",
    "mypy>=1.8.0",

    # Testing
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",

    # Documentation
    "sphinx==7.1.2",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinxcontrib-video>=0.2.0",

    # Development tools
    "ipython>=8.18.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.6.0",

    # Optional features for testing
    "torch>=2.0.0",
]

[project.scripts]
ml-dash = "ml_dash:main"
docs = "ml_dash.scripts:docs"
preview = "ml_dash.scripts:preview"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["ml_dash"]
